# custom-twine-indexer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  l1_deposit.rs  l1_withdraw.rs  mod.rs  native_token_deposit.rs  prelude.rs  rust-toolchain.toml  sent_message.rs  sonar-project.properties
.github/workflows/: audit.yml  build-and-deploy.yml  build.yaml  build_and_deploy.yml  cargo-audit.yml  cargo-deny.yml  container-scan.yml  main.yml  scan.yml  sonarqube.yml  test.yml  zap.yml
crates/api/: Cargo.toml
crates/api/src/: controller.rs  error.rs  lib.rs  pagination.rs  search.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  indexer.rs  lib.rs
crates/common/src/blockscout_entities/: mod.rs  prelude.rs  twine_lifecycle_l1_transactions.rs  twine_transaction_batch.rs
crates/common/src/entities/: celestia_blobs.rs  l1_deposit.rs  l1_withdraw.rs  last_synced.rs  mod.rs  prelude.rs  twine_batch_l2_blocks.rs  twine_batch_l2_transactions.rs  twine_l1_deposit.rs  twine_l1_withdraw.rs  twine_transaction_batch.rs  twine_transaction_batch_detail.rs
crates/da/: Cargo.toml
crates/da/src/: db.rs  lib.rs  types.rs
crates/da/src/celestia/: mod.rs  parser.rs  provider.rs
crates/database/: Cargo.toml
crates/database/src/: batches.rs  blockscout.rs  bridge.rs  client.rs  connect.rs  deposits.rs  lib.rs  uniswap.rs
crates/database/src/blockscout_entities/: account_api_keys.rs  account_api_plans.rs  account_custom_abis.rs  account_identities.rs  account_public_tags_requests.rs  account_tag_addresses.rs  account_tag_transactions.rs  account_watchlist_addresses.rs  account_watchlist_notifications.rs  account_watchlists.rs  address_coin_balances.rs  address_coin_balances_daily.rs  address_contract_code_fetch_attempts.rs  address_current_token_balances.rs  address_names.rs  address_tags.rs  address_to_tags.rs  address_token_balances.rs  addresses.rs  administrators.rs  block_rewards.rs  block_second_degree_relations.rs  blocks.rs  celestia_blobs.rs  constants.rs  contract_methods.rs  contract_verification_status.rs  decompiled_smart_contracts.rs  emission_rewards.rs  event_notifications.rs  internal_transactions.rs  last_fetched_counters.rs  logs.rs  market_history.rs  massive_blocks.rs  migrations_status.rs  missing_balance_of_tokens.rs  missing_block_ranges.rs  mod.rs  pending_block_operations.rs  (+25 more)
crates/database/src/entities/: bridge_destination_transactions.rs  bridge_source_transactions.rs  l1_deposit.rs  l2_withdraw.rs  last_synced.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  source_transactions.rs  transaction_flows.rs  twine_batch_l2_blocks.rs  twine_batch_l2_transactions.rs  twine_l1_deposit.rs  twine_l2_withdraw.rs  twine_lifecycle_l1_transactions.rs  twine_transaction_batch.rs  twine_transaction_batch_detail.rs  uniswap_pools.rs  uniswap_swaps.rs  uniswap_tokens.rs
crates/evm/: Cargo.toml
crates/evm/src/: common.rs
crates/evm/src/ethereum/: mod.rs  parser.rs
crates/evm/src/twine/: db.rs  mod.rs  parser.rs
crates/indexer/evm/: Cargo.toml
crates/indexer/evm/src/: common.rs  error.rs  handler.rs  indexer.rs  lib.rs  provider.rs
crates/indexer/evm/src/ethereum/: db.rs  event_handlers.rs  handlers.rs  mod.rs  parser.rs
crates/indexer/evm/src/twine/: db.rs  handlers.rs  mod.rs  parser.rs
crates/indexer/generic/: Cargo.toml
crates/indexer/generic/src/: handler.rs  indexer.rs  lib.rs  state.rs  types.rs
crates/indexer/svm/: Cargo.toml
crates/indexer/svm/src/: db.rs  handler.rs  indexer.rs  lib.rs  parser.rs  provider.rs  subscriber.rs
crates/providers/: Cargo.toml
crates/providers/src/: evm.rs  lib.rs
crates/svm/: Cargo.toml
crates/svm/src/: db.rs  lib.rs  parser.rs  subscriber.rs
migration/src/: lib.rs  m20250203_000001_create_L1_tables.rs  m20250203_000001_create_tables.rs  m20250203_000002_create_twine_transaction_batch.rs  m20250203_000003_create_twine_transaction_batch_detail.rs  m20250203_000004_create_twine_batch_l2_blocks.rs  m20250203_000005_create_twine_batch_l2_transactions.rs  m20250203_000006_create_twine_lifecycle_l1_transactions.rs  m20250306_000002_create_last_synced_table.rs  m20250310_000003_create_twine_tables.rs  m20250310_000004_create_twine_rollup_tables.rs  m20250507_085332_create_da_table.rs  m20250530_074724_create_bridge_transaction_table.rs  m20250926_174334_create_uniswap_table.rs  mod.rs  shared_enums.rs
migration/src/svm_migrations/: m20250203_000001_native_token_deposits.rs  m20250203_000002_spl_token_deposits.rs  m20250203_000003_native_token_withdrawls.rs  m20250203_000004_spl_token_withdrawls.rs  m20250203_000005_commit_batch.rs  m20250203_000006_finalize_batch.rs  mod.rs
migration/src/svm_migrations/shared_enums/: enums.rs  mod.rs  native_deposit.rs
src/: api.rs  config.rs  db.rs  error.rs  indexer.rs  lib.rs  main.rs  server.rs
src/api/: controller.rs  error.rs  mod.rs  pagination.rs  response.rs
src/entities/: commit_batch.rs  finalize_batch.rs  finalize_transaction.rs  finalized_batch.rs  l1_deposit.rs  l1_withdraw.rs  l2_withdraw.rs  last_synced.rs  mod.rs  native_token_deposit.rs  native_token_withdraw.rs  prelude.rs  sent_message.rs  spl_token_deposit.rs  spl_token_withdraw.rs  twine_batch_l2_blocks.rs  twine_batch_l2_transactions.rs  twine_l1_deposit.rs  twine_l1_withdraw.rs  twine_l2_withdraw.rs  twine_lifecycle_l1_transactions.rs  twine_transaction_batch.rs  twine_transaction_batch_detail.rs
src/indexer/: mod.rs  subscriber.rs
src/indexer/evm/: chain.rs  common.rs  db.rs  mod.rs  parser.rs  subscriber.rs
src/indexer/svm/: db.rs  mod.rs  parser.rs  subscriber.rs  utils.rs
src/indexer/twine/: chain.rs  db.rs  mod.rs  parser.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1741584285839393  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
(+8 files in other folders)
