[package]
name = "twine-indexer"
edition = "2021"

[package.metadata.precommit]
fmt = "cargo fmt"
sort = "cargo sort"

[[bin]]
name = "indexer"
path = "bin/indexer/src/main.rs"

[[bin]]
name = "api"
path = "bin/api/src/main.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/evm",
    "crates/svm",
    "crates/common",
    "crates/api",
    "bin/indexer",
    "bin/api",
]
default-members = ["bin/indexer", "bin/api"]

[workspace.dependencies]
evm = { path = "crates/evm" }
svm = { path = "crates/svm" }
common = { path = "crates/common" }
api-lib = { path = "crates/api" }

anyhow = "1.0.97"
async-trait = "0.1.87"
base64 = "0.22.0"
blake3 = "1.7.0"
borsh = "1.5.5"
chrono = { version = "0.4.39" }
config = "0.15.11"
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = { version = "0.3.31" }
hex = "0.4.3"
num-traits = "0.2.19"
sea-orm = { version = "1.1.4", features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sea-query = "0.32.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twine-evm-contracts = { git = "https://github.com/twinexyz/contracts-metadata.git", branch = "master" }
