[workspace]
resolver = "2"
members = [
    "bin/api",
    "bin/indexer",
    "bin/da-indexer",
    "crates/api",
    "crates/common",
    "crates/indexer/evm",
    "crates/indexer/svm",
    "migration", "crates/da", "crates/database"
, "crates/indexer/generic"]
default-members = ["bin/indexer", "bin/api", "bin/da-indexer"]


[workspace.dependencies]
evm = { path = "crates/indexer/evm" }
svm = { path = "crates/indexer/svm" }
common = { path = "crates/common" }
api-lib = { path = "crates/api" }
da = {path = "crates/da"}
database = {path = "crates/database"}
generic-indexer = {path = "crates/indexer/generic"}

anyhow = "1.0.97"
async-trait = "0.1.87"
base64 = "0.22.0"
blake3 = "1.7.0"
borsh = "1.5.5"
chrono = { version = "0.4.39" }
config = "0.15.11"
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = { version = "0.3.31" }
hex = "0.4.3"
num-traits = "0.2.19"
sea-orm = { version = "1.1.12", features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sea-query = "0.32.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twine-evm-contracts = { git = "https://github.com/twinexyz/contracts-metadata.git", branch = "master" }
