[package]
name = "api-lib"
edition = "2021"

[dependencies]
common = { workspace = true }
axum = { version = "0.8.1" }
chrono = { workspace = true }
eyre = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
database = {workspace = true}
config = {workspace = true}