[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }