[package]
name = "evm"
edition = "2021"

[dependencies]
alloy-consensus = { version = "1.0.30", default-features = false }
alloy-contract = { version = "1.0.30", default-features = false }
# needed to implement `encode_2718` function which comes from `use alloy_eips::Encodable2718;`
alloy-eips = { version = "1.0.30", default-features = false }
alloy-evm = { version = "0.21.0", default-features = false }
alloy-genesis = { version = "1.0.30", default-features = false }
alloy-node-bindings = { version = "1.0.30", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = [
    "map-foldhash",
    "serde",
] }
alloy-provider = { version = "1.0.30", features = [
    "reqwest",
    "ws",
], default-features = false }
alloy-pubsub = { version = "1.0.30", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
    "core-net",
] }
alloy-rpc-types = { version = "1.0.30", features = [
    "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.0.35", default-features = false }
alloy-signer-local = { version = "1.0.30", default-features = false }
alloy-sol-types = { version = "1.3.1", default-features = false, features = [
    "json",
] }
alloy-transport = { version = "1.0.30" }
alloy-trie = { version = "0.9.1", default-features = false }


async-trait = { workspace = true }
blake3 = { workspace = true }
common = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twine-evm-contracts = { git = "https://github.com/twinexyz/weaver.git", branch = "staging" }
twine-rpc = { git = "https://github.com/twinexyz/weaver.git", branch = "main" }
database = { workspace = true }
generic-indexer = { workspace = true }
async-stream = { version = "0.3.6" }

[lints.rust]
unused = "allow"
