[package]
name = "generic-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
database = {workspace = true}
eyre = {workspace = true}
async-trait = { workspace = true }
tracing = { workspace = true }
common = {workspace = true}
tokio = { workspace = true }
futures-util = { workspace = true }