[package]
name = "svm"
edition = "2021"

[dependencies]
common = { workspace = true }

reqwest = "0.12.15"
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
evm = {workspace = true}
num-traits = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-transaction-status-client-types = "2.2.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
database = {workspace = true}
solana-client = "2.2.7"
solana-sdk = "2.2.2"
thiserror = "2.0.12"


[lints.rust]
unused = "allow"
