[package]
name = "svm"
edition = "2021"

[dependencies]
common = { workspace = true }

reqwest = "0.12.23"
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
evm = {workspace = true}
num-traits = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
database = {workspace = true}
generic-indexer = {workspace = true}

solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-commitment-config = "3.0.0"
solana-transaction-status = "3.0.0"
solana-transaction-status-client-types = "3.0.0"
thiserror = "2.0.16"


[lints.rust]
unused = "allow"
